Fixed shuffle problem